--- a/Git_Test01/src/main/resources/application.properties
+++ b/Git_Test01/src/main/resources/application.properties
@@ -1,1 +1,19 @@
 
+# port setting
+server.port=9000
+
+# context path setting
+server.servlet.context-path=/gittest
+
+# oracle DataSource Setting ( Connection Pool )
+spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
+spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
+spring.datasource.username=scott
+spring.datasource.password=tiger
+
+# mapper location
+mybatis.mapper-locations=classpath:mapper/*.xml
+
+# view page setting
+spring.mvc.view.prefix=/WEB-INF/views/
+spring.mvc.view.suffix=.jsp
